--- a/roles/rkhunter/templates/rkhunter.conf.j2
+++ b/roles/rkhunter/templates/rkhunter.conf.j2
@@ -393,10 +393,10 @@ ALLOWDEVFILE=/dev/shm/spice.*
 {% if inventory_hostname in groups['ipa'] or inventory_hostname in groups['ipa_stg'] %}
 ALLOWDEVFILE=/dev/shm/sem.slapd*.stats
 {% endif %}
-{% if inventory_hostname in groups['proxies'] or inventory_hostname in groups['proxies_stg'] %}
-ALLOWDEVFILE=/dev/shm/libpod_rootless_lock_441
+{% if inventory_hostname in groups['retrace'] or inventory_hostname in groups['releng_compose'] %}
+ALLOWDEVFILE=/dev/shm/libpod_*
 {% endif %}
-{% if inventory_hostname in groups['dbserver'] or inventory_hostname in groups['dbserver_stg'] or inventory_hostname in groups['pkgs'] or inventory_hostname in groups['pagure'] or inventory_hostname in groups['pagure_stg'] or inventory_hostname in groups['zabbix_stg']  %}
+{% if inventory_hostname in groups['dbserver'] or inventory_hostname in groups['dbserver_stg'] or inventory_hostname in groups['pkgs'] or inventory_hostname in groups['pagure'] or inventory_hostname in groups['pagure_stg'] or inventory_hostname in groups['zabbix_stg'] or inventory_hostname in groups['retrace'] %}
 ALLOWDEVFILE=/dev/shm/PostgreSQL*
 {% endif %}
 
