--- a/roles/copr/backend/templates/provision/copr-rpmbuild/main.ini.j2
+++ b/roles/copr/backend/templates/provision/copr-rpmbuild/main.ini.j2
@@ -1,8 +1,8 @@
 [main]
-frontend_url = {{ frontend_base_url if frontend_base_url is defined else "unset" }}
+frontend_url = {{ frontend_base_url }}
 distgit_lookaside_url = {scheme}://{netloc}/repo/pkgs/%(ns1)s/%(name)s/%(filename)s/%(hashtype)s/%(hash)s/%(filename)s
 distgit_clone_url = {scheme}://{netloc}/%(module)s
-rpm_vendor_copr_name = {{rpm_vendor_copr_name}}
+rpm_vendor_copr_name = {{ rpm_vendor_copr_name }}
 
 [distgit0]
 distgit_hostname_pattern = src.fedoraproject.org
