bodhi-backend: disable updates-sync and auto pushes for now
Disable these until we sort out the ostree repo issues in releng 10114.
Please check with me before re-enabling. :)

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/bodhi2/backend/templates/bodhi-automated-pushes.cron.j2
+++ b/roles/bodhi2/backend/templates/bodhi-automated-pushes.cron.j2
@@ -2,5 +2,6 @@ MAILTO=sysadmin-releng-members@fedoraproject.org
 {% if RelEngFrozen %}
 {{ '#' }}14 00 * * * apache /usr/local/bin/bodhi-automated-pushes.py
 {% else %}
-14 00 * * * apache /usr/local/bin/bodhi-automated-pushes.py
+# disabled by kevin until we sort out releng 10114
+#14 00 * * * apache /usr/local/bin/bodhi-automated-pushes.py
 {% endif %}
