Revert "bodhi-backend: disable updates-sync and auto pushes for now"
This reverts commit d9d0b9d92691dcaea032c8f3394e8494ebdd2277.

--- a/roles/bodhi2/backend/templates/bodhi-automated-pushes.cron.j2
+++ b/roles/bodhi2/backend/templates/bodhi-automated-pushes.cron.j2
@@ -2,6 +2,5 @@ MAILTO=sysadmin-releng-members@fedoraproject.org
 {% if RelEngFrozen %}
 {{ '#' }}14 00 * * * apache /usr/local/bin/bodhi-automated-pushes.py
 {% else %}
-# disabled by kevin until we sort out releng 10114
-#14 00 * * * apache /usr/local/bin/bodhi-automated-pushes.py
+14 00 * * * apache /usr/local/bin/bodhi-automated-pushes.py
 {% endif %}
